Fixed answer system
Got rid of some random white space.
Fixed the reason the button hover wasn't working.
Fixed the text advancing a step too far after answering a question.

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
     background-color: black;
     overflow: hidden;
     position: relative;
-    z-index: -10;
     background-image: url("images/room.jpg");
     background-size: 100%;
 
@@ -60,7 +59,6 @@ body {
   margin: auto;
   top: 20%;
   display: block;
-  z-index: -2;
 }
 
 #answer-container {
